# nanogpt-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: acceptance.md  checklist.md  roadmap.md  setup.md
docs/experiments/: TEMPLATE.md
src/nanogpt/: __init__.py
tests/: test_package.py
